--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,11 @@
         "Asakusaten",
         "EKIMAE",
         "gottu",
+        "Gyazo",
+        "gyazocli",
+        "hatebu",
+        "hatebucli",
+        "Hatena",
         "INADA",
         "iwamoto",
         "Kakuyasu",
