--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
         "Asakusa",
         "Asakusaten",
         "EKIMAE",
+        "gkeep",
+        "gkeepapi",
+        "gkeepcli",
+        "gogcli",
         "gottu",
         "Gyazo",
         "gyazocli",
