--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,12 +17,15 @@
         "Hatena",
         "INADA",
         "iwamoto",
+        "Jazeera",
         "Kakuyasu",
         "Katsuya",
+        "Meteo",
         "MINAMI",
         "MINAMISENJU",
         "MINOWA",
         "Negishi",
+        "newscli",
         "SENJU",
         "Shitaya",
         "Sukiya",
@@ -32,6 +35,7 @@
         "tasklists",
         "tyougotterimenn",
         "ubereats",
+        "weathercli",
         "yamato"
     ]
 }
