--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
         "MINAMI",
         "MINAMISENJU",
         "MINOWA",
+        "moneycli",
+        "MONEYFORWARD",
         "Negishi",
         "newscli",
         "SENJU",
