--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "MINOWA",
         "moneycli",
         "MONEYFORWARD",
+        "mypy",
         "Negishi",
         "newscli",
         "SENJU",
