--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,10 +32,13 @@
         "MONEYFORWARD",
         "mypy",
         "nanoclaw",
+        "nanocoder",
         "Negishi",
         "newscli",
+        "ollama",
         "openclaw",
         "picoclaw",
+        "qwen",
         "safeclaw",
         "SENJU",
         "Shitaya",
