--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "nanocoder",
         "Negishi",
         "newscli",
+        "NTFY",
         "ollama",
         "openclaw",
         "picoclaw",
