--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Asakusa",
         "Asakusaten",
         "EKIMAE",
+        "Genspark",
         "gkeep",
         "gkeepapi",
         "gkeepcli",
@@ -42,6 +43,7 @@
         "ollama",
         "openclaw",
         "opencode",
+        "Patchset",
         "picoclaw",
         "qwen",
         "safeclaw",
@@ -55,6 +57,7 @@
         "tinyclaw",
         "tyougotterimenn",
         "ubereats",
+        "ungoogled",
         "weathercli",
         "yamato",
         "yuiclaw",
