--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,11 @@
         "Asakusa",
         "Asakusaten",
         "EKIMAE",
+        "EWMH",
         "Genspark",
+        "getactivewindow",
+        "getwindowgeometry",
+        "getwindowname",
         "gkeep",
         "gkeepapi",
         "gkeepcli",
@@ -21,12 +25,16 @@
         "hatebu",
         "hatebucli",
         "Hatena",
+        "hyperflow",
         "INADA",
         "ironclaw",
         "iwamoto",
         "Jazeera",
         "Kakuyasu",
         "Katsuya",
+        "kglobalaccel",
+        "kwin",
+        "lofi",
         "Meteo",
         "mimiclaw",
         "MINAMI",
@@ -45,8 +53,10 @@
         "opencode",
         "Patchset",
         "picoclaw",
+        "qdbus",
         "qwen",
         "safeclaw",
+        "scrot",
         "SENJU",
         "Shitaya",
         "Sukiya",
@@ -58,8 +68,16 @@
         "tyougotterimenn",
         "ubereats",
         "ungoogled",
+        "vaccumetube",
+        "vaccumtube",
+        "vacuumtube",
         "weathercli",
+        "windowmove",
+        "windowsize",
+        "wmctrl",
+        "xprop",
         "yamato",
+        "ytlr",
         "yuiclaw",
         "zeroclaw"
     ]
