--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,7 @@
         "vaccumtube",
         "vacuumtube",
         "weathercli",
+        "windowactivate",
         "windowmove",
         "windowsize",
         "wmctrl",
