--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,9 @@
         "openclaw",
         "opencode",
         "Patchset",
+        "pgrep",
         "picoclaw",
+        "pkill",
         "qdbus",
         "qwen",
         "safeclaw",
@@ -76,6 +78,7 @@
         "windowmove",
         "windowsize",
         "wmctrl",
+        "XAUTHORITY",
         "xprop",
         "yamato",
         "ytlr",
