--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "acore",
         "Agentic",
         "akihabaratenn",
+        "alsa",
         "amem",
         "analysys",
         "Asakusa",
@@ -25,6 +26,7 @@
         "hatebu",
         "hatebucli",
         "Hatena",
+        "headstart",
         "hyperflow",
         "INADA",
         "ironclaw",
@@ -51,6 +53,9 @@
         "ollama",
         "openclaw",
         "opencode",
+        "pactl",
+        "paplay",
+        "parec",
         "Patchset",
         "pgrep",
         "picoclaw",
@@ -59,6 +64,7 @@
         "qwen",
         "safeclaw",
         "scrot",
+        "Seiren",
         "SENJU",
         "Shitaya",
         "Sukiya",
@@ -73,7 +79,10 @@
         "vaccumetube",
         "vaccumtube",
         "vacuumtube",
+        "voicebox",
+        "VOICEVOX",
         "weathercli",
+        "whispercpp",
         "windowactivate",
         "windowmove",
         "windowsize",
