--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,15 @@
         "acomm",
         "acore",
         "Agentic",
+        "Akihabara",
         "akihabaratenn",
         "alsa",
         "amem",
         "analysys",
         "Asakusa",
         "Asakusaten",
+        "bringup",
+        "Cerevo",
         "EKIMAE",
         "EWMH",
         "Genspark",
@@ -66,6 +69,7 @@
         "scrot",
         "Seiren",
         "SENJU",
+        "Shinjuku",
         "Shitaya",
         "Sukiya",
         "Taito",
@@ -88,6 +92,7 @@
         "windowsize",
         "wmctrl",
         "XAUTHORITY",
+        "xdpyinfo",
         "xprop",
         "yamato",
         "ytlr",
