--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "Hatena",
         "headstart",
         "hyperflow",
+        "ikebukuro",
         "INADA",
         "ironclaw",
         "iwamoto",
@@ -94,6 +95,7 @@
         "XAUTHORITY",
         "xdpyinfo",
         "xprop",
+        "xrandr",
         "yamato",
         "ytlr",
         "yuiclaw",
