--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "akihabaratenn",
         "alsa",
         "amem",
+        "amesh",
         "analysys",
         "Asakusa",
         "Asakusaten",
@@ -77,6 +78,8 @@
         "Tajima",
         "tasklist",
         "tasklists",
+        "Tauri",
+        "tenki",
         "tinyclaw",
         "tyougotterimenn",
         "ubereats",
